--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div style="text-align: center;">
       <a
-        href="/lab3/index.html"
+        href="./lab3/index.html"
         style="
           color: black;
           padding: 15px;
