fix lab3 anchor href

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -11,7 +11,7 @@
 
     <div style="text-align: center;">
         <a
-          href="/index.html"
+          href="../index.html"
           style="
             color: black;
             padding: 15px;
